Added factory module and corrected interfaces